# spine

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DOCTRINE.md  NAMING.md  NOTICE  PROVENANCE.md  README.md  REENTRY.md  pyproject.toml
docs/: predicate-witness-index-candidate.md
docs/campaigns/slice-1-doctrine-index/: CAMPAIGN.md
docs/campaigns/slice-1b-edition/: CAMPAIGN.md
docs/campaigns/slice-1c-corpus-expansion/: CAMPAIGN.md
docs/campaigns/slice-1d-edition-compare/: CAMPAIGN.md
docs/campaigns/slice-2a-declaration-source/: CAMPAIGN.md
docs/campaigns/slice-2b-continuity-fixture/: CAMPAIGN.md
editions/b94f04428773ced08c2bd06e17ad9e892cc8eb1f67ad7c5a7f1b1f0d61589459/: edition.json  index.json  index.md  manifest.yaml
editions/fabb36a44c45ff3737c88fcd70d132899d768c8be1d99b33c3a765d1f8be8601/: edition.json  index.json  index.md  manifest.yaml
specimens/: mixed_status_corpus.NOTES.md
src/spine/: __init__.py  cli.py  continuity_fixture.py  edition.py  edition_diff.py  index.py  manifest.py  refusal.py  render.py  source.py
tests/: test_continuity_fixture.py  test_corpus_expansion.py  test_declaration_source.py  test_edition_diff.py  test_edition_packaging.py  test_index_refusal.py  test_manifest_contract.py  test_render_non_authority.py
tests/fixtures/: continuity_export_shape_v0.json
