[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spine"
version = "0.0.1"
description = "The read plane of the constellation — findability is not legitimacy."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["pydantic>=2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[project.scripts]
spine = "spine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
